CoqOfSolidity/test/libsolidity/syntaxTests/errors/selector.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Error E *)

(* Contract *)
Module C.
  Definition t : Value.t :=
    M.member_access (|
      M.get_name (| "E" |),
      "selector"
    |).
End C.
